# AutomaBASE

./: .gitignore  README.md  pyproject.toml
cli/: pds.py
core/: pdd.py  pdf.py  pds.py
schemas/: pdd.yaml  pdf.yaml  pds.yaml
tests/: test_pdd.py  test_pdf.py  test_pds.py
